fixed thrird checkbox bug on iphone5 and smaller screens

--- a/src/components/ExhibitorList/exhibitorlist.scss
+++ b/src/components/ExhibitorList/exhibitorlist.scss
@@ -329,6 +329,7 @@
 
     .checkbox3{
       margin-right: 4%;
+      margin-bottom: 5%;
     }
 
     .checkbox4{
